--- a/views/streams.mustache
+++ b/views/streams.mustache
@@ -1,5 +1,5 @@
  <div class="table-responsive">
-	<table class=table table-striped>
+	<table class="table table-striped table-bordered">
 		<thead>
 			<th>ID</th>
 			<th>Name</th>
