--- a/views/login.mustache
+++ b/views/login.mustache
@@ -1,6 +1,6 @@
 <form action="" class="form-signin">
   <h2 class="form-signin-heading">Please Login</h2>
-  <label for="inputEmail" class="sr-only">Email address</label>
+  <label for="inputUser" class="sr-only">Username</label>
   <input type="text" id="inputUser" class="form-control" placeholder="Username" required autofocus>
   <label for="inputPassword" class="sr-only">Password</label>
   <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
